correção de bug ao salvar paciente

--- a/templates/pacientes/cadastro_paciente.html
+++ b/templates/pacientes/cadastro_paciente.html
@@ -22,6 +22,7 @@
                     <form method="post">
                         {% csrf_token %}
                         <input type="number" name="chave" id="id_chave" hidden>
+                        <input type="text" name="chave" id="id_chave2">
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <label for="id_sus" class="input-group-text">
